--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
-    "react-phone-number-input": "^3.4.9"
+    "react-phone-number-input": "^3.4.9",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
