--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.9",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
