--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/react-redux": "^7.1.34",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,6 +24,7 @@
     "sonner": "^1.7.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
