--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.9",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1"
   },
