--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.9",
     "react-redux": "^9.2.0",
